--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.19",
+    "@types/streamifier": "^0.1.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cloudinary": "^2.6.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "ts-node-dev": "^2.0.0"
   }
 }
